removed http example code from MainActivity, added AndroidManifest.xml FIXME

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
 
     <uses-permission android:name="android.permission.INTERNET"/>
 
+    <!-- FIXME: usesCleartextTraffic=false when using HTTPS -->
     <application
         android:usesCleartextTraffic="true"
         android:allowBackup="true"
